1. ReadME: Add messages How to start with java 9
2. add some system out message